--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,19 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+[workspace]
+members = [".", "entity", "migration"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 axum = {version = "0.7.4", features = ["macros"]}
-serde = {version = "1.0.197", features = ["derive"]}
 tokio = {version = "1.36.0", features = ["full"]}
 tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
+dotenvy = "0.15.7"
+sea-orm = {version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
+serde = {version = "1.0.197", features = ["derive"]}
+
+# For sea-orm codegen
+entity = { path = "entity" }
+migration = { path = "migration" }
