--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ serde = {version = "1.0.197", features = ["derive"]}
 # For sea-orm codegen
 entity = { path = "entity" }
 migration = { path = "migration" }
+serde_json = "1.0.114"
+uuid = "1.7.0"
